macchiato: instruction test change